--- a/src/pages/index/index.less
+++ b/src/pages/index/index.less
@@ -1,16 +1,32 @@
-.title {
-  font-size: 50rpx;
+/**index.wxss**/
+.todos {
+  padding: 10px;
 }
 
-.info {
-  image {
-    height: 280rpx;
-    width: 280rpx;
-  }
+.todo-item.completed {
+  color: #999;
+}
 
-  image, text {
-    display: block;
-    text-align: center;
-    margin: 50rpx;
-  }
+.add-todo {
+  margin-top: 100px;
+}
+
+.filters {
+  display: flex;
+} 
+
+.filters text {
+  margin: 0 10px;
+  padding: 10px;
+  font-size: 14px;
+  border: 1px solid #999;
+  border-radius: 4px;
+  text-align: center;
+  flex: 1
+}
+
+.filters text.active {
+  border-color: #09bb07;
+  background-color: #09bb07;
+  color: #ffffff;
 }
